old_tests/fail/invalid_main_type/main.sk
module Main where

main = 5