old_tests/fail/invalid_main_type/main.sk.output
ERROR: main in module Main has type Int instead of ()
-- ../tests/fail/invalid_main_type/main.sk:3
| 
| main = 5
